--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.16.0"
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.1"
 
   }
 }
