--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://garvkhullar:HHflicMnT6FCO2HF9@fakemoneytransfer.iqcqmvl.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb://garvkhullar:HHFlicMnT6FCO2HF9@fakemoneytransfer-shard-00-00.iqcqmvl.mongodb.net:27017,fakemoneytransfer-shard-00-01.iqcqmvl.mongodb.net:27017,fakemoneytransfer-shard-00-02.iqcqmvl.mongodb.net:27017/fakemoneytransfer?ssl=true&replicaSet=atlas-abc-shard-0&authSource=admin&retryWrites=true&w=majority
