--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://garvkhullar:HHFlicMnT6FCO2HF9@fakemoneytransfer.iqcqmvl.mongodb.net/fakemoneytransfer?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://garvkhullar:HHFlicMnT6FCO2HF9%40fakemoneytransfer@fakemoneytransfer.iqcqmvl.mongodb.net/fakemoneytransfer?retryWrites=true&w=majority
