--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://garvkhullar:Kce2JyQWnu3b8Qx@fakemoneytransfer.iqcqmvl.mongodb.net/fakemoneytransfer?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://garvkhullar:Kce2JyQWnu3b8Qx@fakemoneytransfer.iqcqmv1.mongodb.net/?retryWrites=true&w=majority&appName=fakemoneytransfer
